<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".TrackOverview">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/select_session"
            android:textColor="@color/white"
            android:textSize="44sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/filterText"
                android:layout_weight="1"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@color/orange"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/Filter" />

            <Spinner
                android:id="@+id/filter_spinner"
                android:layout_weight="3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView3"
                android:layout_weight="1"
                android:layout_width="50dp"
                android:layout_marginStart="10dp"
                android:layout_height="wrap_content"
                android:background="@color/orange"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/Sort" />

            <Spinner
                android:id="@+id/sort_spinner"
                android:layout_weight="3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"/>

        </LinearLayout>

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sessionOverviewList"
        android:layout_marginTop="110dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</RelativeLayout>

